# sigexec

./: .gitignore  GITHUB_PAGES_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PLUGIN_ARCHITECTURE_ANSWER.md  README.md  branched_graph.md  complex_graph.md  index.html  migrate_to_ports.py  pyproject.toml  setup.py  simple_graph.md  variant_graph.md
basic-demo/: index.html
branch-merge-demo/: index.html
custom-blocks-demo/: index.html
docs/: ARCHITECTURE.md  BRANCH_MERGE.md  CLEAN_DAG.md  CUSTOM_BLOCKS.md  PLUGIN_REFERENCE.md  QUICK_REFERENCE.md  README.md  index.html
docs_test/: index.html
documentation/: CLEAN_DAG.md  CUSTOM_BLOCKS.md
examples/: basic_demo.py  branch_demo.py  branch_merge_demo.py  custom_blocks_demo.py  custom_blocks_example.py  implicit_branching_demo.py  input_variants_demo.py  memoization_demo.py  memory_efficient_variants_demo.py  mermaid_port_comparison.py  optimize_ports_comparison.py  parameter_exploration_demo.py  pipeline_branching.py  port_flow_visualization_demo.py  port_optimization_visual_demo.py  ports_demo.py  post_processing_demo.py  publish_demos.py  query_graph_demo.py  radar_clean_dag.py  radar_fluent_pipeline.py  radar_plotly_dashboard.py  radar_processing_demo.py  radar_range_doppler.py  variant_demo.py  visualization_demo.py  why_branches_matter.py  why_branches_matter_demo.py
memoization-demo/: index.html
ports-demo/: index.html
post-processing-demo/: index.html
radar-processing-demo/: index.html
sigchain/: __init__.py  visualization.py
sigexec/: __init__.py
staticdash/: index.html
test_dashboard_output/: index.html
tests/: conftest.py  test_branch_merge.py  test_branch_merge_api.py  test_core_data.py  test_core_graph.py  test_custom_blocks.py  test_decorator_and_strict_mode.py  test_functional_blocks.py  test_graph_port_optimization.py  test_merge_requires_branches.py  test_port_optimizer.py  test_publish_demos_failures.py  test_sigchain.py  test_variant_branch_interaction.py  (+1 more)
(+70 files in other folders)
